<resources>
    <string name="app_name">Vucut Kitle Indexi Hesaplama</string>
    <string name="bay">Bay</string>
    <string name="bayan">Bayan</string>
    <string name="boy_tv">Boy</string>
    <string name="kilo_tv">Kilo</string>
    <string name="cinsiyet">Cinsiyet</string>
    <string name="ideal_kilo_tv">İdeal Kilo</string>
    <string name="durum_tv">Durum</string>
    <string name="zayif">Zayıf Durumdasınız</string>
    <string name="ideal">İdeal Kilodasınız</string>
    <string name="normalden_fazla">Ortalamanın Üzerinde Kilodasınız</string>
    <string name="fazla_kilolu">Fazla Kilolusunuz</string>
    <string name="obez">Malesef Obezsiniz</string>
    <string name="doktora">Tedavi Şart</string>
</resources>
